open-policy-agent/authentication-user-management/delete-kubeadmin/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDeleteKubeadmin
metadata:
  name: delete-kubeadmin
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Secret"]
    namespaces: ["kube-system"]
