open-policy-agent/authentication-user-management/delete-kubeadmin/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: K8sDeleteKubeadmin
  annotations:
    description: Disallow kubeadmin user to have secrets (disable kubeadmin).
spec:
  crd:
    spec:
      names:
        kind: K8sDeleteKubeadmin
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package K8sDeleteKubeadmin
        violation[{"msg": msg}] {
          input.review.kind.kind == "Secret"
          input.review.object.metadata.name == "kubeadmin"
          msg := "kubeadmin secrets are not deleted"
        }
